Fix article margins on mobile

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -69,7 +69,10 @@
 
 .article-body
     line-height: 1.4
-    margin: 0 6rem
+    @include mobile
+        margin: 0 1rem
+    @include tablet
+        margin: 0 6rem
 
 .promo-block .container
     margin: 1rem 5rem
